added images and audio for next testing procedure

--- a/team.html
+++ b/team.html
@@ -64,8 +64,19 @@
                     </div>          
                 </div>
                 <div class="button-center" >
-                <a id="secret-btn" onclick="toggle(event);">Want to know a secret?<span class="sr-only">About - click for more information</span></a>
+                <!---<a id="secret-btn" onclick="toggle(event);">Want to know a secret?<span class="sr-only">About - click for more information</span></a>
                 <div id="secret" style="display:none">
+                        <p>Christmas at Gran's was written by Michael Brennan at the age of 10, and adapted into this digital story by Conor Carroll. It is with deep regret that Conor discovered that Bonzo 
+                        did not, in fact, exist, and was a figment of Brennan's imagination for the sake of the poem. As Michael's brother Tom put it, he took "a bit of creative licence there". We hope that 
+                        you love him all the same.
+                        </p>
+                        <span class="sr-only">Christmas at Gran's was written by Michael Brennan at the age of 10, and adapted into this digital story by Conor Carroll. It is with deep regret that Conor discovered that Bonzo 
+                        did not, in fact, exist, and was a figment of Brennan's imagination for the sake of the poem. As Michael's brother Tom put it, he took "a bit of creative licence there". We hope that 
+                        you love him all the same.</span>
+                </div>-->
+                <button onclick="secretButton()">Want to know a secret?</button>
+
+                <div id="secret">
                         <p>Christmas at Gran's was written by Michael Brennan at the age of 10, and adapted into this digital story by Conor Carroll. It is with deep regret that Conor discovered that Bonzo 
                         did not, in fact, exist, and was a figment of Brennan's imagination for the sake of the poem. As Michael's brother Tom put it, he took "a bit of creative licence there". We hope that 
                         you love him all the same.
