Added if/else statement to audio

--- a/team.html
+++ b/team.html
@@ -55,7 +55,7 @@
                                 <div class="team">
                                     <h4>Conor Carroll, the artist</h4>
                                     <img class="doodle" src="assets/images/conor.png" alt="A self portrait doodel of Conor Carroll">
-                                    <p>Conor Carroll is an artist, educator and sfotware developer from Ireland. With his artistic work focusing primarily on 
+                                    <p>Conor Carroll is an artist, educator and software developer from Ireland. With his artistic work focusing primarily on 
                                         illustrations and comics, the opportunity to make a Michael Brennan story come to life was never going to be scoffed at.
                                     </p>
                                 </div>  
