test new audio function and format

--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
             <div id="myCarousel" class="carousel slide lazy" data-interval="false">
                     <div class="carousel-inner" >
                         <div class="item active" id="image1">
-                            <img src="assets/images/titleplaceholder.png" alt="Title of poem 'Christmas at Grans'" onclick="playAudio('assets/audio/audio1.mp3')" >
+                            <audio id="audio1" src="assets/audio/audio1.mp3"></audio>
+                            <a href="#" id="play1">
+                                <img src="assets/images/titleplaceholder.png">
+                            </a>
+                            <!---<img src="assets/images/titleplaceholder.png" alt="Title of poem 'Christmas at Grans'" onclick="playAudio('assets/audio/audio1.mp3')" >-->
                             <span class="sr-only">Christmas at Gran's</span>
                         </div>
                         <div class="item" id="image2">
